--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,6 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+    --ion--color-primary: linear-gradient(45deg, blue, red);
+}
