--- a/src/app/pages/edit-user/edit-user.page.scss
+++ b/src/app/pages/edit-user/edit-user.page.scss
@@ -9,12 +9,15 @@
  margin-left: 20px;
     
 }
-ion-icon{
+ion-avatar ion-icon{
     position: absolute;
     color: black;
     top: 70%;
     left: 55%;
     transform: translate(-50%, -50%);
+}
+ion-icon{
+    padding-right: 30px;
 }
 .date{
    
