--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -15,10 +15,17 @@
         
         <ion-list>
         
-          <ion-item style="text-align: center;">Edad : {{edad}}</ion-item>
+          <ion-item style="text-align: center;">
+            <ion-icon name="people"></ion-icon>
+            
+            Age : {{edad}}
+          
+          
+          </ion-item>
 
           <ion-item >
-            <ion-label class="date">Fecha de nacimiento :    <ion-datetime-button [disabled]="true"  class="buttonDate"  datetime="datetime"></ion-datetime-button>
+            <ion-icon name="calendar"></ion-icon>  
+            <ion-label class="date"> Birthday :    <ion-datetime-button [disabled]="true"  class="buttonDate"  datetime="datetime"></ion-datetime-button>
   
               <ion-modal [keepContentsMounted]="true">
               <ng-template>
@@ -35,13 +42,25 @@
           </ion-label>
           </ion-item>
          
-          <ion-item>Email : {{email}}</ion-item>
+          <ion-item>
+            <ion-icon name="mail"></ion-icon>
+            Email : {{email}}
+          </ion-item>
          
-          <ion-item>Telefono : {{phone}}</ion-item>
+          <ion-item>
+            <ion-icon name="call"></ion-icon>
+            Phone : {{phone}}
+          </ion-item>
           
-          <ion-item>Genero : {{genero}}</ion-item>
-         
-          <ion-item>Pais : {{pais}}</ion-item>
+          <ion-item>
+            <ion-icon name="body"></ion-icon>
+            
+            Grender : {{genero}}</ion-item>
+            
+          <ion-item>
+              
+            <ion-icon name="earth"></ion-icon>
+            Country : {{pais}}</ion-item>
         </ion-list>
         
       </ion-card-content>
