store with services

--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -1,90 +1,5 @@
-<ion-content > 
-      <div class="productos" *ngIf="numProducts !=0; else elseBlock">
-        <ion-card (click)="setOpen(true,product.id)" *ngFor=" let product of allProducts">
-          <ion-card-header class="fond-color">
-            <ion-img [src]="product.image"/>
-          </ion-card-header>
-          <ion-item >
-            
-            <p>{{product.title}}</p>
-
-          </ion-item>
-        
-          
-            <h2>$ {{product.price}}</h2>
-
-          
-
-          <ion-modal [isOpen]="isModalOpen">
-            <ng-template>
-              <ion-header>
-                <ion-toolbar>
-                  <ion-title >Producto selecionado</ion-title>
-                  <ion-buttons slot="end">
-                    <ion-button (click)="setOpen(false,product.id)">Close</ion-button>
-                  </ion-buttons>
-                </ion-toolbar>
-              </ion-header>
-              <ion-content color="ligth" class="contenido-full" >
-
-                  <ion-text class="negrilla" id="title">
-                 
-                    <h1>{{selectProduct?.title}}</h1>
-
-                    
-                  </ion-text>
-                  <div class="imagen-form"> 
-                    <ion-img [src]="selectProduct?.image" class="imagen-info"/>
-
-                  </div>
-                 
-
-                  <ion-text class="negrilla" id="price">
-               
-
-                      <h2> $ {{selectProduct?.price}}</h2>
-                    
-                  </ion-text>
-                  
-                <!-- <ion-text>
-                    <h4>{{selectProduct?.rating?.count}}</h4>
-                      <h4>{{selectProduct?.rating?.rate}}</h4>
-                  </ion-text>-->
-                  <div class="contenedor-selector">
-                   
-
-                      
-                      <ion-select  justify="start"  style="width: 40%;"  label="Cantidad" [(ngModel)]="num">
-                        <ion-select-option [value]="num" *ngFor=" let num of listN" >{{num}}</ion-select-option>
-                      </ion-select>
-                      
-                      <div slot="placeholder"><ion-text >Hay mas de 20 unidades</ion-text></div>
-                    
-                  </div>
-                  <ion-text>
-
-                    <ion-label>{{selectProduct?.description}}</ion-label>
-                  </ion-text>
-                  <br>
-            
-                  <div clase="compra" id="botones-compra">
-                    
-                    <ion-button>Comprar ahora</ion-button>
-                    
-                    <ion-button>Agregar al carrito</ion-button>
-                  </div>
-                
-              </ion-content>
-            </ng-template>
-          </ion-modal>
-            
-          
-       </ion-card>
-      </div> 
-      <ng-template #elseBlock>
-        <div  class="no-encuentra">
-
-        <h1>No hay productos disponibles</h1>
-      </div>
-      </ng-template>
+<ion-content>
+  <app-card [allProducts]="allProducts" [shopping]="status" (addProduct)="listSend($event)"></app-card>
+  <app-icon-shopping></app-icon-shopping>
+ 
 </ion-content>
