--- a/src/app/pages/user/user.page.scss
+++ b/src/app/pages/user/user.page.scss
@@ -10,7 +10,7 @@
           130deg,#000000,#1db6ef
       );*/
     /*  --background:linear-gradient(130deg,#008fee,#f8f8f8);*/
-      --background: linear-gradient(0deg,#008fee,#7a049d);
+      //--background: linear-gradient(0deg,#008fee,#7a049d);
      
       
   }
