--- a/src/app/pages/edit-user/edit-user.page.scss
+++ b/src/app/pages/edit-user/edit-user.page.scss
@@ -85,7 +85,7 @@ ion-item{
         130deg,#000000,#1db6ef
     );*/
   /*  --background:linear-gradient(130deg,#008fee,#f8f8f8);*/
-    --background: linear-gradient(0deg,#008fee,#7a049d);
+    //--background: linear-gradient(0deg,#008fee,#7a049d);
 
    
     
