--- a/src/app/components/form-product/form-product.component.scss
+++ b/src/app/components/form-product/form-product.component.scss
@@ -66,3 +66,23 @@ form{
 ion-button{
     margin-top: 15px;
 }
+@media (max-width: 768px) {
+    ion-card{
+        margin: 0px 10px;
+    }
+    ion-card-header{
+        font-size: 12pt;
+    }
+    ion-label{
+        font-size: 10pt;
+    }
+    ion-input{
+        font-size: 10pt;
+    }
+    ion-select{
+        font-size: 10pt;
+    }
+    ion-button{
+        font-size: 10pt;
+    }
+}
